--- a/fp-intro/index.html
+++ b/fp-intro/index.html
@@ -457,6 +457,13 @@ Arrays.sort(rosterAsArray, Person::compareByAge);
                 <section>
                      <section>
                         <h2>default methods</h2>
+                        <ul>
+                            <li class="fragment">umożliwiają rozszerzenie interfejsów zapewniając kompatybilność z kodem napisanym dla ich starszych wersji</li>
+                            <li class="fragment"><i>default</i></li>
+                            <li class="fragment">mogą zostać zadeklarowane ponownie</li>
+                            <li class="fragment">mogą zostać nadpisane</li>
+                            <li class="fragment">przykład: <i>stream()</i></li>
+                        </ul>
                     </section>
                 </section>
 				
