Agenda spojna z innymi slajdami

--- a/fp-intro/index.html
+++ b/fp-intro/index.html
@@ -55,9 +55,9 @@
 				<section>
 					<h2>Agenda</h2>
 					<ul>
-						<li>Definicje</li>
-						<li>Nowości w Javie 8</li>
-						<li>Przykłady</li>
+						<li>definicje</li>
+						<li>nowości w Javie 8</li>
+						<li>przykłady</li>
 					</ul>
 				</section>
 				
