Stream API - added link to intel documentation

--- a/fp-naivetolambda/index.html
+++ b/fp-naivetolambda/index.html
@@ -720,6 +720,7 @@ Arrays.sort(rosterAsArray, Person::compareByAge);
 						- <a href="https://docs.oracle.com">https://docs.oracle.com</a> <br>
 						- <a href="https://github.com/RichardWarburton/java-8-lambdas-exercises">https://github.com/RichardWarburton/java-8-lambdas-exercises</a> <br>
 						- <a href="http://shop.oreilly.com/product/0636920030713.do">Java 8 Lambdas. Richard Warburton</a>
+						- <a href="https://software.intel.com/sites/default/files/article/164389/fp-consistency-102511.pdf">Consistency of Floating-Point Results using the Intel® Compiler</a>
 					</p>
 				</section>
 
