Stream API - summary draft

--- a/fp-naivetolambda/index.html
+++ b/fp-naivetolambda/index.html
@@ -368,6 +368,12 @@ R r2 = finisher.apply(combiner.apply(a2, a3));  // result with splitting
 				
 				<section>
 					<section>
+						<h2>podsumowanie</h2>
+						<ul>
+							<li>stream api umożliwia łatwe dodawanie własnej logiki (własnych collectorów)</li>
+							<li>refaktoryzacja do (darmowego) zrównoleglenia wymaga nieco więcej pracy</li>
+							<li>także testy mogą skorzystać na refaktoryzacji do lambdy</li>							
+						</ul>
 					</section>
 				</section>
 	
