Stream API - repo address

--- a/fp-naivetolambda/index.html
+++ b/fp-naivetolambda/index.html
@@ -55,6 +55,12 @@
 				</section>
 
 				<section>
+					<h2 class="highlight-blue">github.com/jmayday/jmayday.github.io/</h2>
+					<h3>&nbsp;</h3>
+					<h3>fp-naivetolambda/examples</h3>
+				</section>
+				
+				<section>
 					<h2>Agenda</h2>
 					<ul>
 						<li><i>lambdafication</i></li>
