Stream API - repo address

--- a/fp-naivetolambda/index.html
+++ b/fp-naivetolambda/index.html
@@ -55,9 +55,10 @@
 				</section>
 
 				<section>
-					<h3 class="highlight-blue">github.com/jmayday/jmayday.github.io/</h3>
+					<h3 class="fragment highlight-blue" style="display: inline-flex;">github.com/jmayday/jmayday.github.io/</h3>
 					<h3>&nbsp;</h3>
-					<h3>fp-naivetolambda/examples</h3>
+					<h3 class="fragment highlight-blue" style="display: inline-flex;">fp-naivetolambda/examples</h3>
+				</section>
 				</section>
 				
 				<section>
