java-reflection Set title for new presentation

--- a/java-reflection/index.html
+++ b/java-reflection/index.html
@@ -24,7 +24,15 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>
+					<h2>Refleksja w Javie</h2>
+					<span class="fragment">
+					<h3>case study</h3>
+					</span>
+					<p>
+						<small>Jakub Madej. 13 lutego 2017.</small>
+					</p>
+				</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
