java-reflection Add slides

--- a/java-junit5/index.html
+++ b/java-junit5/index.html
@@ -46,12 +46,59 @@
 				<section>
 					<h2>Agenda</h2>
 					<ul>
-						<li>podstawy</li>
-						<li>dynamic tests</li>
-						<li>extension model</li>
-						<li>architektura</li>
-						<li>narzędzia i setup</li>
+						<li class="fragment grow">podstawy</li>
+						<li class="fragment grow">dynamic tests</li>
+						<li class="fragment grow">extension model</li>
+						<li class="fragment grow">architektura</li>
+						<li class="fragment grow">narzędzia i setup</li>
 					</ul>
+				</section>
+
+				<section>
+					<h2>Podstawy</h2>
+					<ul>
+						<li class="fragment fade-up">private package</li>
+						<li class="fragment fade-up">@Test (org.junit.jupiter.api)</li>
+						<li class="fragment fade-up">lifecycle</li>
+						<li class="fragment fade-up">assertEquals</li>
+						<li class="fragment fade-up">lambdy (laaaazy)</li>
+						<li class="fragment fade-up">assertAll</li>
+						<li class="fragment fade-up">assertThrows</li>
+						<li class="fragment fade-up">expectThrows</li>
+						<li class="fragment fade-up">@Nested</li>
+						<li class="fragment fade-up">@Display</li>
+						<li class="fragment fade-up">parametry metod testowych</li>
+					</ul>
+				</section>
+
+				<section class="present" style="top: 139px; display: block;">
+					<h2>Lifecycle</h2>
+					<table>
+						<thead>
+						<tr>
+							<th>Starość</th>
+							<th>Nowość</th>
+						</tr>
+						</thead>
+						<tbody>
+						<tr>
+							<td>@BeforeAll</td>
+							<td>@BeforeClass</td>
+						</tr>
+						<tr>
+							<td>@BeforeEach</td>
+							<td>@Before</td>
+						</tr>
+						<tr>
+							<td>@AfterEach</td>
+							<td>@After</td>
+						</tr>
+						<tr>
+							<td>@AfterAll</td>
+							<td>@AfterClass</td>
+						</tr>
+						</tbody>
+					</table>
 				</section>
 			</div>
 		</div>
