java-junit5 Organize packages
* moved to separate pacakges
* added some slides

--- a/java-junit5/index.html
+++ b/java-junit5/index.html
@@ -191,13 +191,12 @@ Stream<DynamicTest> fibonacciTestFactory() {
 						<h2>extension model</h2>
 
 						<ul>
-							<li class="fragment">programmatic, conditional test/container execution</li>
-							<li class="fragment">post-process test instances</li>
-							<li class="fragment">additional behavior to test containers before/after all tests are invoked</li>
-							<li class="fragment">additional behavior to tests before/after each test is invoked</li>
-							<li class="fragment">additional behavior to tests immediately before/after each test is executed</li>
-							<li class="fragment">dynamically resolve parameters at runtime</li>
-							<li class="fragment">handle exceptions thrown during test execution</li>
+							<li class="fragment">programowalne, warunkowe wykonanie testu/kontenera</li>
+							<li class="fragment">post-processing</li>
+							<li class="fragment">dodatkowe zachowanie dla before/after all</li>
+							<li class="fragment">dodatkowe zachowanie dla before/after each (oraz "tuż przed")</li>
+							<li class="fragment">rozwiązywanie parametrów w runtime'ie</li>
+							<li class="fragment">obsługa wyjątków</li>
 
 						</ul>
 
