java-junit5 Organize ending slides
* added logos

--- a/java-junit5/index.html
+++ b/java-junit5/index.html
@@ -24,18 +24,17 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
-					<h2>JUnit 5</h2>
-					<h2 class="fragment highlight-blue">nowości</h2>
+				<section data-background="img/pgssoftware-logo-variants/pgssoftware-logo.svg" data-background-repeat="no-repeat" data-background-size="600px" data-background-position="left bottom">
+					<h2>JUnit 5<span class="fragment" style="color: #ff2c2d">*</span></h2>
+					<h2 style="color: #1b91ff">nowości</h2>
 					<p>
-						<small>Jakub Madej. 13 lutego 2017.</small>
+						<small>PGS Software. Jakub Madej. 7 marca 2017.</small>
+					</p>
+					<p class="fragment" style="color: #ff2c2d">
+						<small>*<a href="https://github.com/junit-team/junit5/wiki/Roadmap"><i>5.0.0-M3</i></a></small>
 					</p>
 				</section>
-				<section>
-					<h3 class="fragment highlight-blue" style="display: inline-flex;">github.com/jmayday/jmayday.github.io/</h3>
-					<h3>&nbsp;</h3>
-					<h3 class="fragment highlight-blue" style="display: inline-flex;">java-junit5/examples</h3>
-				</section>
+
 				<section>
 					<pre><code>
 λ("this should always return true", () -> {
@@ -292,14 +291,18 @@ testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0-M3")</pre></code>
 
 				<section>
 					<h1>Pytania?</h1>
+
+					<div>Prezentacja dostępna pod adresem: <a href="https://jmayday.github.io/java-junit5">jmayday.github.io/java-junit5</a></div>
+					<div>Adres projektu gradle'a: <a href="https://github.com/jmayday/jmayday.github.io/tree/master/java-junit5">https://github.com/jmayday/jmayday.github.io</a></div>
+
 				</section>
 
 				<section>
 					<h1>Źródła</h1>
 
 					<ul>
-						<li>Nicolai Parlog - http://blog.codefx.org/libraries/junit-5-setup/</li>
-						<li>JUnit 5 User Guide - http://junit.org/junit5/docs/current/user-guide/</li>
+						<li>Nicolai Parlog - <a href="http://blog.codefx.org/libraries/junit-5-setup/">http://blog.codefx.org/libraries/junit-5-setup/</a></li>
+						<li>JUnit 5 User Guide - <a href="http://junit.org/junit5/docs/current/user-guide/">http://junit.org/junit5/docs/current/user-guide/</a></li>
 					</ul>
 				</section>
 
