--- a/java-junit5/index.html
+++ b/java-junit5/index.html
@@ -284,7 +284,7 @@ Stream<DynamicTest> fibonacciTestFactory() {
 						<code><pre>
 testCompile("org.junit.jupiter:junit-jupiter-api:5.0.0-M3")
 testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0-M3")
-testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0-M3")</pre></code>
+testCompile("org.junit.vintage:junit-vintage-engine:4.12.0-M3")</pre></code>
 					</section>
 				</section>
 
