java-junit5 Add mockito examples

--- a/java-junit5/index.html
+++ b/java-junit5/index.html
@@ -28,7 +28,7 @@
 					<h2>JUnit 5<span class="fragment" style="color: #ff2c2d">*</span></h2>
 					<h2 style="color: #1b91ff">nowości</h2>
 					<p>
-						<small>PGS Software. Jakub Madej. 7 marca 2017.</small>
+						<small><a href="https://www.pgs-soft.com/">PGS Software</a>. Jakub Madej. 7 marca 2017.</small>
 					</p>
 					<p class="fragment" style="color: #ff2c2d">
 						<small>*<a href="https://github.com/junit-team/junit5/wiki/Roadmap"><i>5.0.0-M3</i></a></small>
@@ -294,6 +294,7 @@ testCompile("org.junit.vintage:junit-vintage-engine:4.12.0-M3")</pre></code>
 
 					<div>Prezentacja dostępna pod adresem: <a href="https://jmayday.github.io/java-junit5">jmayday.github.io/java-junit5</a></div>
 					<div>Adres projektu gradle'a: <a href="https://github.com/jmayday/jmayday.github.io/tree/master/java-junit5">https://github.com/jmayday/jmayday.github.io</a></div>
+					<div>Blogpost Piotra Szerszenia - lada dzień</div>
 
 				</section>
 
@@ -303,6 +304,8 @@ testCompile("org.junit.vintage:junit-vintage-engine:4.12.0-M3")</pre></code>
 					<ul>
 						<li>Nicolai Parlog - <a href="http://blog.codefx.org/libraries/junit-5-setup/">http://blog.codefx.org/libraries/junit-5-setup/</a></li>
 						<li>JUnit 5 User Guide - <a href="http://junit.org/junit5/docs/current/user-guide/">http://junit.org/junit5/docs/current/user-guide/</a></li>
+						<li>junit5-samples - <a href="https://github.com/junit-team/junit5-samples">https://github.com/junit-team/junit5-samples</a></li>
+
 					</ul>
 				</section>
 
