java-junit5 Strike deprecated method

--- a/java-junit5/index.html
+++ b/java-junit5/index.html
@@ -82,7 +82,7 @@ class E01ZnajdzTrzyRozniceTest {
 						<li class="fragment fade-up">lambdy (laaaazy)</li>
 						<li class="fragment fade-up">assertAll</li>
 						<li class="fragment fade-up">assertThrows</li>
-						<li class="fragment fade-up">expectThrows</li>
+						<li class="fragment fade-up"><strike>expectThrows</strike></li>
 						<li class="fragment fade-up">@Nested</li>
 						<li class="fragment fade-up">@Display</li>
 						<li class="fragment fade-up">parametry metod testowych</li>
