java-junit5 Fix typo

--- a/java-junit5/index.html
+++ b/java-junit5/index.html
@@ -271,7 +271,7 @@ Stream<DynamicTest> fibonacciTestFactory() {
 							<li>Deprecated - nie używać, może zniknąć</li>
 							<li>Experimental - dla nowych ficzurów</li>
 							<li>Maintained - nie powinno zniknąć, jeśli zniknie oznaczone będzie jako Deprecated</li>
-							<li>Stable - nie będzie zmian w aktualnej werji</li>
+							<li>Stable - nie będzie zmian w aktualnej wersji</li>
 						</ul>
 					</section>
 				</section>
