--- a/java-backend-pwr/index.html
+++ b/java-backend-pwr/index.html
@@ -24,7 +24,53 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>Slide 1
+					<aside class="notes">
+						1. Wykorzystane narzędzia:
+						jhipster,
+						mapstruct,
+						gradle,
+						intellij jako IDE (EAP, dac link na koncowych slajdach)
+						squirrel SQL (cokolwiek co ma odpowiedni driver do bazy danych)
+						swagger
+
+						2. Wykorzystne biblioteki
+						guava, apache commons,
+
+						czym są, w czym w pomagają
+						DRY vs KISS
+
+						3. Wykorzystane frameworki
+
+						Spring (moduły spring-boot, spring-data-jpa, spring-rest),
+						Hibernate (poruszyć problem: n+1, lazy vs eager, LazyInitializationException, transient, id vs uuid, equals/hashCode)
+
+						4. Aplikacja
+						a) architektura - RESTful, baza danych: in memory (h2), oracle
+						b) komponenty - warstwy: (web, serwisy, repozytoria),
+						c) warstwy
+						d) wzorce - builder
+						e) klasy
+
+
+						5 System kontroli wersji
+						Git, strategia branchowania: gitflow
+
+						dlaczego gitflow? rozwiązuje np. problem równoległej pracy w zespole, ułatwia (i wymusza) code-review, jest lekki (daje możliwość szybkiego branchownia), umożliwia hotfixy dowonlej wersji
+
+						o czym warto pamiętać? o konwencjach (git commit message), o możliwośćiach (rebase, w tym squash itp, amend)
+
+						6. Sposób pracy z kodem
+						a) dobre i złe praktyki
+						b) dobry i zły kod
+
+						7. organizacja zadań
+
+						metodologia scrum ()
+
+						8 współpraca w zespole
+					</aside>
+				</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
